# ChangeLog for app-shells/bash
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-shells/bash/ChangeLog,v 1.146 2007/05/05 17:17:53 nixnut Exp $

  05 May 2007; nixnut <nixnut@gentoo.org> bash-3.2_p15-r1.ebuild:
  Stable on ppc wrt bug 176882

  03 May 2007; Raúl Porcel <armin76@gentoo.org> bash-3.2_p15-r1.ebuild:
  ia64 + x86 stable wrt bug 176882

  03 May 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  bash-3.2_p15-r1.ebuild:
  Stable on sparc wrt #176882

  03 May 2007; Markus Rothe <corsair@gentoo.org> bash-3.2_p15-r1.ebuild:
  Stable on ppc64; bug #176882

  03 May 2007; Jeroen Roovers <jer@gentoo.org> bash-3.2_p15-r1.ebuild:
  Stable for HPPA (bug #176882).

*bash-3.2_p17 (03 May 2007)

  03 May 2007; Mike Frysinger <vapier@gentoo.org> +bash-3.2_p17.ebuild:
  Version bump.

*bash-3.2_p15-r1 (24 Mar 2007)

  24 Mar 2007; Mike Frysinger <vapier@gentoo.org>
  +files/bash-3.2-redisplay-cursor.patch, +bash-3.2_p15-r1.ebuild:
  Add fix for redisplay bug in unicode locales #155369.

  23 Mar 2007; Roy Marples <uberlord@gentoo.org> bash-3.2_p15.ebuild:
  Only preserve the /bin/sh symlink if it's bash.

*bash-3.2_p15 (22 Mar 2007)

  22 Mar 2007; Mike Frysinger <vapier@gentoo.org> +bash-3.2_p15.ebuild:
  Version bump.

*bash-3.2_p10 (06 Mar 2007)

  06 Mar 2007; Mike Frysinger <vapier@gentoo.org> +bash-3.2_p10.ebuild:
  Version bump.

  27 Feb 2007; Fabian Groffen <grobian@gentoo.org> bash-3.0-r12.ebuild,
  bash-3.0-r13.ebuild, bash-3.0-r14.ebuild, bash-3.1_p16.ebuild,
  bash-3.1_p17.ebuild, bash-3.2_p5.ebuild, bash-3.2_p9.ebuild,
  bash-3.2_p9-r1.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  04 Feb 2007; Mike Frysinger <vapier@gentoo.org> files/bashrc:
  Accept gnome* in enhanced output #165305 by Ed Catmur.

  18 Jan 2007; Ryan Hill <dirtyepic@gentoo.org> bash-3.2_p9-r1.ebuild:
  info symlink broke from move to ecompress.  committing as obvious.
