@@ -36,9 +36,8 @@ DIST bash32-014 8141 RMD160 cf47a705b00039bdc2cc5cd37dd20a58b029af33 SHA1 287558
 DIST bash32-015 2293 RMD160 6535eb24b8d30ce9756b1e7c0d21c0946b1d354e SHA1 aaae708b76d0904d3a8a7006f6f66df68af4fbaa SHA256 de40425e83628eb7431f39340ac09b42b5fcf484a565352851961b3e917d8771
 DIST bash32-016 1620 RMD160 cfded7fc1b9bc328c4fb1167c536fcbd28756615 SHA1 2329364459a0eff6614e889954d040c6cfd9846b SHA256 7abf66bbba3ebd6b6428190f3ebca59abdc0bfa3957f1a725489de7391c2d9f1
 DIST bash32-017 2611 RMD160 7366ea8c0109b41a9bf5a369aa5fa56f4b8792f1 SHA1 1535ec0fe4b8578dfa68e4a71b17d5827c666aeb SHA256 951aa2a07b38db8eea8e7368d3ac36af60af7f5ade455215006229ce3815dfe0
-EBUILD bash-3.2_p15-r1.ebuild 9444 RMD160 40c9977e0d3bb6c04f16db22498bdb5008e4b57f SHA1 ed9f93a5c42fb0b69dfa101149eb309a0a7496e7 SHA256 d71218f5f8c70d56e2f91c918d06fa1589f4b1bd4e0ffa5854033dc0e1762111
-EBUILD bash-3.2_p17.ebuild 9374 RMD160 6ef62c9475ead330fe86d2c277dffd36c084cf79 SHA1 1806710da74b9c3138d717b870798a844c0ed867 SHA256 c770aec21118eb45d0e752e7e68d015bfcefe07a7cc2ec4df9699f5270132558
+EBUILD bash-3.2_p15-r1.ebuild 4724 RMD160 891f7f7cc5029aa66f32e8e92c088cbbc708e5b3 SHA1 7e2253b20e5547a9fca92ca8fdbabf262839e6cd SHA256 7d7bd8ff6f04d96fee559d44b733f21a7fefd10302a0c5efaf63a969bda2ffff
+EBUILD bash-3.2_p17.ebuild 4656 RMD160 8ad2a93224a7f00e34dafc6d24b257ff6c57d20c SHA1 0c6eacdd1e1a6ed571f8a5bbf12a23bd9f488785 SHA256 4989d5367377c6c0f7a362859d8497881f6bf7dd14fa54d3489dff23d685123f
 EBUILD bash-3.2_p9-r01.1.ebuild 4721 RMD160 4e488c9c40aac7275454709bb94c4658ab152303 SHA1 327852443fe879cdd437656774a31ef70edbc7d2 SHA256 62f6e7271473ff4bed1e7f9bf0b32d4de6bb4ed79d69e85faa0b66f94ba3b9ae
-MISC ChangeLog 24943 RMD160 3fb06a8e794ed2a1d81e462d88f977def73c197f SHA1 f007d1e21b9dcb48a3ad7554608ee0f315a68bf0 SHA256 a9e681b7cf4134cf4320629e0d63cd68602482390753abbf52a05014002b5ba8
-MISC bash-3.2_p15-r1.ebuild.rej 475 RMD160 60a98e908e7e024ab6daac1b2b8e27a1ade90a07 SHA1 aea4fb7593c31c53dc06589227becf7194859e94 SHA256 12a7e60b37f929b57b734a85045810aee132bcf52b2fd200c050e1b4b9dcb01a
+MISC ChangeLog 25147 RMD160 e9cf0a1f680233105076541ed0a0cbcb1e4f97b3 SHA1 a91da6cdde0d35842362f4369a664b5a8dee40f4 SHA256 240a15a00c71bd494c04fbb959d3696e29e4659fe0053c41a82e392104803ea0
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
